[fix] Fixed non-working functionality

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "nanoid": "^3.2.0",
     "prettier": "^2.5.1",
     "prop-types": "^15.8.1",
+    "react-loader-spinner": "^5.1.0",
     "styled-components": "^5.3.3"
   },
   "lint-staged": {
